<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddRoad"
    android:background="#55ebeaec">

    <TextView
        android:id="@+id/textView_km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:text="@string/km" />

    <EditText
        android:id="@+id/editText_km"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_km"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:inputType="numberDecimal"
        android:textSize="17sp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView_ill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText_km"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:text="@string/ill" />

    <EditText
        android:id="@+id/editText_ill"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_ill"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:inputType="numberDecimal"
        android:textSize="17sp"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/textView_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText_ill"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:text="@string/price" />

    <EditText
        android:id="@+id/editText_price"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_price"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:inputType="numberDecimal"
        android:textSize="17sp"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/textView_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText_price"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:text="@string/date" />

    <EditText
        android:id="@+id/editText_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_date"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:inputType="date"
        android:textSize="17sp"
        android:ems="10" >
    </EditText>

    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/editText_date"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/button_addnew" />


</RelativeLayout>